2004-04-14  Jeffrey Stedfast  <fejj@ximian.com>

	* providers/imap/camel-imap-store.c
	(imap_check_folder_still_extant): Use %F instead of %S so that the
	folder name gets properly converted from using '/' path delimeters
	to whatever the native character the server uses. Should fix bug
	#56715.

2004-04-14  Not Zed  <NotZed@Ximian.com>

	* camel-disco-store.c (set_status): do offline mail syncing (only
	for open folders so far).  If we fail doing syncing or store sync,
	don't abort.

2004-04-13  Jeffrey Stedfast  <fejj@ximian.com>

	* providers/imap/camel-imap-store.c (get_folder_online):
	Rearranged some error checking code to fix bug #56405.

2004-04-13  Not Zed  <NotZed@Ximian.com>

	* camel-folder.c (folder_getv): implement the new counts, and get
	them all atomically so they're only calculated once and can return
	consistent results.

	* camel-folder.h: Added CAMEL_FOLDER_DELETED, CAMEL_FOLDER_JUNKED,
	and CAMEL_FOLDER_VISIBLE args, to support client display of
	various values.

2004-04-13  Jeffrey Stedfast  <fejj@ximian.com>

	* camel-folder.h (camel_folder_delete_message): Fix NotZed's fix
	to not mark messages as unseen. Fixes bug #56879.

2004-04-13   Sivaiah Nallagatla <snallagatla@novell.com>

	* providers/groupwise/camel-gw-listener.c
	(add_addressbook_sources): change the auth type string from
	Password to plain/password

2004-04-12  Jeffrey Stedfast  <fejj@ximian.com>

	Fix for bug #56878.

	* camel-gpg-context.c (gpg_verify): Don't rely on the exit code of
	gpg, we already save enough state to decide if the sig is valid
	without it. Modified to only set BAD if gpg->validsig and
	gpg->nopubkey are both FALSE. If we get a NO_PUBKEY status
	message, then it simply means that the the sender could not be
	verified.
	(gpg_ctx_parse_status): Listen for NO_PUBKEY status messages.

2004-04-11  Sivaiah Nallagatla <snallagatla@novell.com>

	* providers/groupwise/camel-gw-listener.c 
	(add_addressbook_sources) (modify_addressbook_sources) : add