@@ -531,7 +531,7 @@ imap_parse_flag_list (char **flag_list_p)
 ATOM_CHAR       ::= <any CHAR except atom_specials>
 
 atom_specials   ::= "(" / ")" / "{" / SPACE / CTL / list_wildcards /
-                    quoted_specials
+                    quoted_specials / resp_secials
 
 CHAR            ::= <any 7-bit US-ASCII character except NUL,
                      0x01 - 0x7f>
@@ -544,6 +544,8 @@ SPACE           ::= <ASCII SP, space, 0x20>
 list_wildcards  ::= "%" / "*"
 
 quoted_specials ::= <"> / "\"
+
+resp_specials   ::= "]"
 */
 
 static unsigned char imap_atom_specials[256] = {
@@ -552,7 +554,7 @@ static unsigned char imap_atom_specials[256] = {
 /* 20 */0, 1, 0, 1, 1, 0, 1, 1, 0, 0, 0, 1, 1, 1, 1, 1,
 /* 30 */1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,
 /* 40 */1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,
-/* 50 */1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0, 1, 1, 1,
+/* 50 */1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0, 0, 1, 1,
 /* 60 */1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,
 /* 70 */1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0, 1, 0, 1, 0,
 	0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 
